PTI-258: Order/Inspection admin detail page. (#98)
- Wire up publish/unpublish buttons
